# pyproject-starter

./: README.md  pyproject.toml  requirements.txt
src/pyproject_starter/: __init__.py  __main__.py  add_data.py  cli.py  db_utils.py  show_data.py
tests/: __init__.py
